using UnityEngine;
using System.Collections;
using System.Collections.Generic;

public class ThuongHan : MonoBehaviour
{
    // ... (Giá»¯ nguyÃªn cÃ¡c khai bÃ¡o Stats, Health, Animation Timings, References) ...
    [Header("Stats")]
    public float moveSpeed = 2f;
    public float attackRange = 1.5f;
    public float attackCooldown = 1.5f;
    public float detectRange = 6f;
    public float attackDamage = 10f;

    [Header("Health")]
    [SerializeField] private float playerPunchDamage = 2f;
    [SerializeField] private int requiredPunchesToKill = 2;
    private float maxHealth;
    private float currentHealth;

    [Header("Animation Timings")]
    public float attackAnimationDuration = 1.0f; // Váº«n cáº§n dÃ¹ng cho Coroutine

    [Header("References")]
    public LayerMask playerLayer;

    // ðŸ”Š AUDIO DECLARATIONS
    [Header("Audio")]
    public AudioClip idleSound;
    public AudioClip attackSound;
    public AudioClip hurtSound;
    public AudioClip deathSound;
    private AudioSource audioSource;

    private Transform player;
    private Animator animator;
    private Rigidbody2D rb;

    private bool isDead = false;
    private bool isAttacking = false;
    private bool isFacingRight = true;
    private float lastAttackTime = 0f;

    void Start()
    {
        animator = GetComponent<Animator>();
        rb = GetComponent<Rigidbody2D>();
        player = GameObject.FindGameObjectWithTag("Player")?.transform;

        // ðŸ”Š SETUP AUDIO SOURCE
        audioSource = GetComponent<AudioSource>();
        if (audioSource == null)
        {
            audioSource = gameObject.AddComponent<AudioSource>();
            audioSource.playOnAwake = false;
        }

        // Báº¯t Ä‘áº§u phÃ¡t Ã¢m thanh IDLE
        StartIdleSound();

        lastAttackTime = Time.time - attackCooldown;
        maxHealth = requiredPunchesToKill * playerPunchDamage;
        currentHealth = maxHealth;
    }

    void Update()
    {
        if (isDead || player == null) return;
        if (isAttacking)
        {
            rb.linearVelocity = Vector2.zero;
            return;
        }

        float distance = Vector2.Distance(transform.position, player.position);

        if (distance <= attackRange)
        {
            StopMoving(true); 
            FlipTowardsPlayer();

            if (Time.time - lastAttackTime >= attackCooldown)
            {
                StartCoroutine(Attack());
            }
        }
        else if (distance <= detectRange)
        {
            MoveTowardsPlayer();
        }
        else
        {
            StopMoving(false); 
        }
    }

    // ================== AUDIO HELPERS ==================

    private void StartIdleSound()
    {
        if (idleSound != null)
        {
            audioSource.clip = idleSound;
            audioSource.loop = true;
            if (!audioSource.isPlaying) audioSource.Play();
        }
    }

    private void StopAllLoopingSound()
    {
         if (audioSource.isPlaying && audioSource.loop)
         {
             audioSource.Stop();
         }
    }

    // ================== MOVEMENT ==================

    private void MoveTowardsPlayer()
    {
        animator.SetBool("isWalking", true);
        StopAllLoopingSound(); // Dá»«ng Idle khi di chuyá»ƒn

        Vector2 direction = (player.position - transform.position).normalized;
        rb.linearVelocity = new Vector2(direction.x * moveSpeed, rb.linearVelocity.y);

        if (direction.x > 0 && !isFacingRight) Flip();
        else if (direction.x < 0 && isFacingRight) Flip();
    }
    
    private void StopMoving(bool keepIdleSound) 
    {
        animator.SetBool("isWalking", false);
        if (rb != null) rb.linearVelocity = Vector2.zero;

        if (keepIdleSound)
        {
            StartIdleSound();
        }
        else
        {
             StopAllLoopingSound();
        }
    }


    private IEnumerator Attack()
    {
        isAttacking = true;
        // KHÃ”NG CÃ“ ANIMATION RIÃŠNG CHO ATTACK, NÃŠN NÃ“ Sáº¼ CHÆ I IDLE HOáº¶C Dá»ªNG Háº²N
        rb.linearVelocity = Vector2.zero; 
        
        // ðŸ”Š PHÃT Ã‚M THANH Táº¤N CÃ”NG
        StopAllLoopingSound();
        if (attackSound != null) audioSource.PlayOneShot(attackSound);
        
        // Giáº£ láº­p thá»i gian táº¥n cÃ´ng (Enemy bá»‹ Ä‘Ã³ng bÄƒng trong 1.0s)
        yield return new WaitForSeconds(attackAnimationDuration); 

        isAttacking = false;
        lastAttackTime = Time.time;
        
        // Báº¯t Ä‘áº§u láº¡i Idle sound sau khi táº¥n cÃ´ng
        StartIdleSound();
    }

    // ... (Giá»¯ nguyÃªn ApplyDamageToPlayer) ...
    public void ApplyDamageToPlayer()
    {
        // ...
    }

    // ================== DAMAGE & DEATH ==================

    public void TakeDamage(float dmg)
    {
        if (isDead) return;

        isAttacking = false;
        if (rb != null) rb.linearVelocity = Vector2.zero;
        
        // ðŸ”Š PHÃT Ã‚M THANH Bá»Š ÄÃNH
        if (hurtSound != null)
        {
            // Ã‚m thanh hurt (chÆ¡i má»™t láº§n) cÃ³ thá»ƒ phÃ¡t trong khi idle sound Ä‘ang loop
            audioSource.PlayOneShot(hurtSound); 
        }
        
        currentHealth -= dmg;
        Debug.Log(gameObject.name + " bá»‹ nháº­n " + dmg + " sÃ¡t thÆ°Æ¡ng. MÃ¡u cÃ²n: " + currentHealth);

        if (currentHealth <= 0)
        {
            Die();
        }
        else
        {
            // KHÃ”NG CÃ“ ANIM 'HURT', NÃŠN CHá»ˆ PHÃT Ã‚M THANH
            // Enemy váº«n á»Ÿ tráº¡ng thÃ¡i Idle/Dá»«ng.
        }
    }

    public void Die()
    {
        if (isDead) return;
        isDead = true;

        animator.SetTrigger("TgDeath"); 

        // ðŸ”Š PHÃT Ã‚M THANH CHáº¾T
        StopAllLoopingSound(); 
        if (deathSound != null)
        {
            audioSource.PlayOneShot(deathSound);
        }

        if (rb != null)
        {
            rb.linearVelocity = Vector2.zero;
            rb.simulated = false;
        }

        GetComponent<Collider2D>().enabled = false;
        this.enabled = false;

        Destroy(gameObject, 2f);
    }
    
    // ... (Giá»¯ nguyÃªn cÃ¡c hÃ m Flip, FlipTowardsPlayer, OnDrawGizmosSelected) ...

    private void Flip()
    {
        isFacingRight = !isFacingRight;
        Vector3 scale = transform.localScale;
        scale.x *= -1;
        transform.localScale = scale;
    }

    private void FlipTowardsPlayer()
    {
        float directionX = player.position.x - transform.position.x;
        if (directionX > 0 && !isFacingRight) Flip();
        else if (directionX < 0 && isFacingRight) Flip();
    }

    private void OnDrawGizmosSelected()
    {
        Gizmos.color = Color.red;
        Gizmos.DrawWireSphere(transform.position, attackRange);
        Gizmos.color = Color.yellow;
        Gizmos.DrawWireSphere(transform.position, detectRange);
    }
}